# fastapi-docker-template

./: .gitignore  README.md  config.py  docker-compose.yml  pyproject.toml  sample.env  wait_postgres.sh
docker/fastapi/: Dockerfile
docker/postgres/: Dockerfile
sample/: db.py  main.py
utils/: reset_db.py
